tests/baselines/reference/jsFileCompilation_node_mjs_importMissingFileExtension_cjs_mjs.errors.txt
tests/cases/compiler/index.mjs(1,18): error TS2307: Cannot find module './blah' or its corresponding type declarations.
tests/cases/compiler/index.mjs(2,30): error TS2307: Cannot find module './utils' or its corresponding type declarations.


==== tests/cases/compiler/blah.mjs (0 errors) ====
    export default class Blah {}
    
==== tests/cases/compiler/utils.cjs (0 errors) ====
    function util1() {}
    function util2() {}
    module.exports = { util1, util2 };
    
==== tests/cases/compiler/index.mjs (2 errors) ====
    import Blah from "./blah";
                     ~~~~~~~~
!!! error TS2307: Cannot find module './blah' or its corresponding type declarations.
    import { util1, util2 } from "./utils";
                                 ~~~~~~~~~
!!! error TS2307: Cannot find module './utils' or its corresponding type declarations.
    